--- a/index.html
+++ b/index.html
@@ -1,4 +1,68 @@
-<audio id="backgroundMusic" loop>
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Una Carta para Ti</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <div class="container">
+        <div class="title-container">
+            <h1 class="title">Una Carta para Ti</h1>
+            <p class="instruction">Haz clic en el sobre para empezar</p>
+        </div>
+
+        <div class="envelope-container" id="closedEnvelope">
+            <div class="envelope">
+                <div class="flap"></div>
+                <div class="seal">
+                    <i class="fas fa-lock"></i>
+                </div>
+            </div>
+            <div class="sticker"></div>
+        </div>
+        
+        <div class="letter-container" id="letterContainer">
+            <div class="open-letter" id="openLetter">
+                <div class="letter-content">
+                    <p class="to">Para: Mi princesa hermosa</p>
+                    <p>
+                        Hola, mi amor. Me encontré con esta idea y quise hacerla para ti.
+                        No sé si te gustará, pero el cariño y el tiempo que le dediqué a hacerla
+                        es mi forma de recordarte que siempre te tengo presente.
+                    </p>
+                    <p>
+                        Te quiero. <span class="signature">Tu amor.</span>
+                    </p>
+                </div>
+                <button id="secretButton" class="secret-button">¡Presiona aquí! ❤️</button>
+            </div>
+            <button id="closeButton" class="close-button">Cerrar</button>
+        </div>
+    </div>
+    
+    <div class="romantic-background" id="romanticBg"></div>
+    <div class="hearts-container" id="heartsContainer"></div>
+
+    <div class="music-control" id="musicControl">
+        <i class="fas fa-volume-mute"></i>
+    </div>
+
+    <div id="passwordModal" class="modal">
+        <div id="passwordContainer" class="modal-content">
+            <div class="seal"><i class="fas fa-lock"></i></div>
+            <h2>Contraseña</h2>
+            <p>Ingresa la contraseña para abrir la carta.</p>
+            <input type="password" id="passwordInput" placeholder="Introduce la clave">
+            <button id="passwordButton">Abrir mi carta</button>
+            <p id="passwordError" class="error-message">Contraseña incorrecta. Inténtalo de nuevo.</p>
+            <p id="passwordHint" class="hint-message">Pista: La clave es el día y el mes de nuestra cita en Chifa.</p>
+        </div>
+    </div>
+
+    <audio id="backgroundMusic" loop>
         <source src="te_extrano.mp3" type="audio/mp3">
         Tu navegador no soporta el elemento de audio.
     </audio>
@@ -269,3 +333,5 @@
             }
         });
     </script>
+</body>
+</html>
