--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
             left: 0;
             width: 100%;
             height: 100%;
-            z-index: 0; /* Z-index bajo para que no bloquee otros elementos */
+            z-index: -1;
             overflow: hidden;
-            pointer-events: none; /* Asegura que no bloquee los clics */
+            pointer-events: none;
         }
 
         .heart-particle {
@@ -46,7 +46,6 @@
             font-size: 24px;
             animation: floatUp 15s linear infinite;
             opacity: 0;
-            z-index: 1;
         }
 
         .twinkle {
@@ -54,7 +53,6 @@
             background: rgba(255, 255, 255, 0.8);
             border-radius: 50%;
             animation: twinkle 3s infinite;
-            z-index: 1;
         }
 
         .glow {
@@ -65,7 +63,6 @@
             background: radial-gradient(circle, rgba(255, 182, 193, 0.4) 0%, rgba(255, 182, 193, 0) 70%);
             filter: blur(20px);
             animation: glowMove 15s infinite alternate;
-            z-index: 1;
         }
 
         .container {
@@ -74,7 +71,7 @@
             max-width: 800px;
             width: 100%;
             perspective: 1000px;
-            z-index: 10; /* Asegura que el contenido esté sobre el fondo */
+            z-index: 100;
             padding: 15px;
         }
 
@@ -115,7 +112,7 @@
             cursor: pointer;
             transform-style: preserve-3d;
             transition: transform 0.5s;
-            z-index: 20; /* Asegura que el sobre esté por encima de todo el contenido */
+            z-index: 20;
         }
 
         .envelope-back {
@@ -240,7 +237,7 @@
             color: white;
             font-size: 18px;
             cursor: pointer;
-            z-index: 30; /* Z-index alto para que sea clicable siempre */
+            z-index: 30;
             box-shadow: 0 3px 10px rgba(0, 0, 0, 0.2);
             transition: all 0.3s;
         }
@@ -285,7 +282,7 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            z-index: 100;
+            z-index: 1000;
             opacity: 0;
             visibility: hidden;
             transition: all 0.5s ease;
@@ -442,7 +439,7 @@
             justify-content: center;
             align-items: center;
             cursor: pointer;
-            z-index: 100;
+            z-index: 1000;
             backdrop-filter: blur(5px);
             border: 2px solid #d32f2f;
             box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
@@ -550,7 +547,7 @@
 </head>
 <body>
     <audio id="backgroundMusic" loop>
-        <source src="te_extrano.mp3" type="audio/mpeg">
+        <source src="https://assets.mixkit.co/sfx/preview/mixkit-beautiful-romantic-piano-1361.mp3" type="audio/mpeg">
     </audio>
     
     <div class="music-control" id="musicControl">
